# flickseed

./: .env.example  .gitignore  CLAUDE.md  PROJECT.MD  PROJECT.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/: settings.json
.claude/skills/: data-discovery-tmdb.md  embed-films.md  probe-tmdb.md
.github/workflows/: ci.yml  deploy.yml
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.tsx
data/: lines.json  lines.json.example
data/corpus/: 10331.md  10386.md  105.md  106.md  10681.md  10787.md  1091.md  111224.md  1124.md  11299.md  11544.md  1167366.md  (+138 more)
docs/: architecture.md  data-discovery.md  embedding-pipeline.md  terms.md  topology-pipeline.md
pipeline/: .env.example  README.md  config.yaml  pyproject.toml
pipeline/flickseed_pipeline/: __init__.py  export.py
pipeline/flickseed_pipeline/cluster/: __init__.py  __main__.py
pipeline/flickseed_pipeline/corpus/: __init__.py  __main__.py
pipeline/flickseed_pipeline/embed/: __init__.py  __main__.py
pipeline/flickseed_pipeline/enrich/: __init__.py  __main__.py
pipeline/flickseed_pipeline/graph/: __init__.py  __main__.py
pipeline/flickseed_pipeline/ingest/: __init__.py  __main__.py  queries.py
pipeline/flickseed_pipeline/layout/: __init__.py
pipeline/reports/: scifi-001.csv  scifi-001.md  scifi-002.csv  scifi-002.md  seed-final.csv  seed-final.md
pipeline/scripts/: diagnose_embeddings.py  get_films.py  plot_embeddings.py  plot_stations.py  print_candidates.py  run_pipeline.py
src/: App.tsx  main.tsx  vite-env.d.ts
(+18 files in other folders)
