[project]
name = "flickseed-pipeline"
version = "0.1.0"
description = "Data pipeline for Flickseed: ingest -> corpus -> embed -> cluster -> graph -> layout -> data/layout.json"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flickseed_pipeline"]

[tool.uv]
dev-dependencies = []
