[project]
name = "flickseed-pipeline"
version = "0.1.0"
description = "Data pipeline for Flickseed: ingest -> corpus -> embed -> cluster -> graph -> layout -> data/layout.json"
requires-python = ">=3.11"
dependencies = [
    # HTTP + env (probe-tmdb, embed-films)
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # Config
    "pyyaml>=6.0",
    # Data / IO
    "pandas>=2.0",
    "pyarrow>=14",
    "numpy>=1.26",
    # Representation learning (embed-films)
    "scikit-learn>=1.4",
    "sentence-transformers>=3.0",
    "networkx>=3.0",
    "node2vec>=0.4",
    # Visualization (diagnostic plots)
    "plotly>=5.0",
    "umap-learn>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flickseed_pipeline"]

[dependency-groups]
dev = []
